--- a/manga-app/src/components/NavBar/NavBar.module.css
+++ b/manga-app/src/components/NavBar/NavBar.module.css
@@ -1,15 +1,12 @@
-.containerNavBar{
-    width: 100%;
-    height: 10vh;
-    background-color: steelblue;
+.NavBar {
+    height: 15vh;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-.containerList{
+.NavBarList {
     display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    gap: 30px;
+    list-style: none;
+    gap: 100px;
 }
