--- a/ikigai/src/components/CartLine/CartLine.module.css
+++ b/ikigai/src/components/CartLine/CartLine.module.css
@@ -1,6 +1,7 @@
 .CartLineContainer {
     display: flex;
     flex-wrap: wrap;
+    flex-direction: row;
     width: 100%;
     justify-content: space-around;
     align-items: center;
